fix too much scroll on user pages

--- a/app/assets/app/components/users/_detail.scss
+++ b/app/assets/app/components/users/_detail.scss
@@ -1,13 +1,17 @@
 #user_detail_component {
-    .list-group-item {
-        padding: 3px;
-        min-height: 42px;
-        .show_value {
-            padding-top: 7px;
-            padding-left: 13px;
+    #user_detail_box {
+        margin: 0px auto;
+        width: 60%;
+        .list-group-item {
+            padding: 3px;
+            min-height: 42px;
+            .show_value {
+                padding-top: 7px;
+                padding-left: 13px;
+            }
         }
-    }
-    .contributions {
-        margin-top: 20px;
+        .contributions {
+            margin-top: 20px;
+        }
     }
 }
