--- a/app/assets/app/components/users/_list.scss
+++ b/app/assets/app/components/users/_list.scss
@@ -1,2 +1,6 @@
 #user_list_component {
+    #user_list_box {
+        margin: 0px auto;
+        width: 60%;
+    }
 }
