--- a/app/assets/app/components/users/_user.scss
+++ b/app/assets/app/components/users/_user.scss
@@ -2,7 +2,5 @@
     height: 100%;
     #user_content {
         height: 100%;
-        margin: 0px auto;
-        width: 50%;
     }
 }
